# grab-some-apis

./: .editorconfig  .env.example  .gitignore  .lintstagedrc.json  .npmrc  .nvmrc  .prettierignore  .prettierrc.json  LICENSE  README.md  commitlint.config.js  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  tsconfig.json  turbo.json
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-label.yml  ci.yml  dependency-updates.yml
apps/api/: .env.example  .flake8  .gitignore  README.md  bandit-report.json  package.json  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/dependencies/: auth.py
apps/api/app/api/routes/: __init__.py  apis.py  circuit_breakers.py  health.py
apps/api/app/api/routes/v1/: __init__.py  nasa.py  rickandmorty.py
apps/api/app/core/: circuit_breaker.py  config.py  database.py  security.py
apps/api/app/models/database/: __init__.py
apps/api/app/repositories/: base.py
apps/api/app/schemas/: nasa.py  rickandmorty.py
apps/api/app/services/: api_service.py  base.py  nasa_service.py  rickandmorty_service.py
apps/api/scripts/: README.md  __init__.py  check_all.py  format_code.py  lint_code.py  typecheck.py
apps/api/tests/: test_main.py
apps/web/: .env.example  .gitignore  eslint.config.mjs  next.config.ts  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api/health/: route.ts
apps/web/src/app/giphy/: layout.tsx  page.tsx
apps/web/src/app/giphy/search/: page.tsx
apps/web/src/app/giphy/translate/: page.tsx
apps/web/src/app/giphy/trending/: page.tsx
apps/web/src/app/nasa/: layout.tsx  loading.tsx  page.tsx
apps/web/src/app/rickandmorty/: page.tsx
apps/web/src/components/rickandmorty/: character-search.tsx
apps/web/src/components/ui/: nasa-components.tsx
apps/web/src/hooks/: use-debounced-value.ts  use-nasa-queries.ts  use-rickandmorty-queries.ts
apps/web/src/lib/: config.ts  constants.ts  enums.ts  env.ts  index.ts
apps/web/src/lib/api/: giphy-api.ts  index.ts  nasa-api.ts  rickandmorty-api.ts
apps/web/src/providers/: query-provider.tsx
apps/web/src/stores/: giphy-store.ts  nasa-store.ts  rickandmorty-store.ts
apps/web/src/types/: nasa.ts  rickandmorty.ts
docs/: DOCKER.md  ENVIRONMENT.md  SCRIPTS.md
examples/: README.md
tools/: format-python.cjs  init-db.sql  switch-env.js  validate-env.js
