[tool.poetry]
name = "grab-some-apis-api"
version = "0.1.0"
description = "FastAPI backend for Grab Some APIs dashboard"
authors = ["SSlimShady <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
python-multipart = ">=0.0.18"
httpx = "^0.28.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.1.1"
redis = "^5.3.1"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.43"
alembic = "^1.16.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.2.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.3.0"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
httpx = "^0.28.1"
autopep8 = "^2.3.2"
bandit = "^1.8.0"
pip-audit = "^2.9.0"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
format = "scripts.format_code:main"
lint = "scripts.lint_code:main"
typecheck = "scripts.typecheck:main"
check = "scripts.check_all:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".env",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".tox",
    ".coverage",
    ".pytest_cache",
    "node_modules"
]
ignore = ["E203", "W503"]
